fix(variables): decrease layout breakpoints
to prevent layout shift while opening web-inspector,
as well as having a better inspection experience.

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,5 +1,5 @@
-$break-point-small: 1400px;
-$break-point-mini: 1000px;
+$break-point-small: 1000px;
+$break-point-mini: 800px;
 
 :root {
     --width-nav-panel: 16rem;
